Bug 284678 - Dragging messages to folders indicates drop targets *between* folders
Summary: Dragging messages to folders indicates drop targets *between* folders
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-22 08:58 UTC by Gunter Ohrner
Modified: 2013-06-17 20:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2011-10-22 08:58:31 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

While dragging messages to the folder tree, the UI indicates possible drop targets between mail folders, which does not make any sense with messages.

Dropping a message between two folders even displays the drop action popup menu, but selecting anything in it will cancel the operation.

Reproducible: Always

Steps to Reproduce:
Drag a message to the folder view, and drag it between two existing folders.

Actual Results:  
The UI displays a line / bar between the folders, indicating a valid drop target. Releasing the mouse button will open the drop action popup menu. Selecting anything in it will silently cancel the invalid operation.

Expected Results:  
The UI should not indicate drop targets for messages between folders. Messages can only be dragged into a folder, not into the folder tree itself.
Comment 1 Laurent Montel 2011-10-24 07:37:23 UTC
I confirm it.
Will look at what I can do.
Comment 2 Laurent Montel 2011-10-25 11:56:13 UTC
Git commit 680fc81838a3908d4b8d10c9d879bae4f1096071 by Montel Laurent.
Committed on 25/10/2011 at 13:55.
Pushed by mlaurent into branch 'master'.

Fix Bug 284678 - Dragging messages to folders indicates drop targets *between* folders

FIXED-IN: 4.7.3
BUG: 284678

M  +14   -2    akonadi/dragdropmanager.cpp
M  +1    -1    akonadi/dragdropmanager_p.h
M  +1    -1    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/680fc81838a3908d4b8d10c9d879bae4f1096071
Comment 3 Laurent Montel 2011-10-25 11:56:47 UTC
Git commit 5b6f16839789afe2980852d8141f3e151a29cff3 by Montel Laurent.
Committed on 25/10/2011 at 13:55.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 284678 - Dragging messages to folders indicates drop targets *between* folders

FIXED-IN: 4.7.3
BUG: 284678
(cherry picked from commit 680fc81838a3908d4b8d10c9d879bae4f1096071)

M  +14   -2    akonadi/dragdropmanager.cpp
M  +1    -1    akonadi/dragdropmanager_p.h
M  +1    -1    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/5b6f16839789afe2980852d8141f3e151a29cff3
Comment 4 Frank Steinmetzger 2013-06-17 20:42:19 UTC
I’m sorry to report that this bug has resurfaced at some point in the past. For quite some time now I’ve been observing it in my KMail 2 (currently KDE 4.10.4, Gentoo packages). Though I don’t get a popup menu after dropping a message between folders, the drop mark line stays visible afterwards. I can clear it by dragging a message over it again, so that the drop mark around a folder clears those pixels when it itself is cleared.