Fix Bug 284678 - Dragging messages to folders indicates drop targets *between* folders

FIXED-IN: 4.7.3
BUG: 284678